Update to discord link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="subtitle">Experience Hypixel Skyblock on a new level. Undetectable, powerful, and built for victory.</p>
                     <div class="actions">
                         <a href="#download" class="btn btn-primary">Download Now</a>
-                        <a href="https://discord.gg/your-discord" target="_blank" class="btn btn-secondary">Join The Community</a>
+                        <a href="https://discord.gg/ghosthasgone" target="_blank" class="btn btn-secondary">Join The Community</a>
                     </div>
                 </div>
             </section>
