--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                    <p>Unleash your creativity with our powerful and intuitive scripting engine. Inspired by the simplicity of AutoHotkey and powered by the performance of Lua, you can create any utility you can imagine. From custom macros to complex automation, you have full control.</p>
                    <div class="code-editor-mockup">
                        <div class="code-header">
-                           <span>auto-sell.lua</span>
+                           <span>auto-harp.lua</span>
                            <div class="code-buttons">
                                <span class="code-btn"></span><span class="code-btn"></span><span class="code-btn"></span>
                            </div>
