--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h1>WRAITH</h1>
                         <h1>WRAITH</h1>
                     </div>
-                    <p class="subtitle">Experience Hypixel Skyblock on a new level. Undetectable, powerful, and built for victory.</p>
+                    <p class="subtitle">Experience Hypixel Skyblock on a new level. Undetectable, powerful, and built for Efficiency.</p>
                     <div class="actions">
                         <a href="#download" class="btn btn-primary">Download Now</a>
                         <a href="https://discord.gg/ghosthasgone" target="_blank" class="btn btn-secondary">Join The Community</a>
@@ -61,7 +61,7 @@
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                         <i class="ph-puzzle-piece"></i>
                         <h3>Dungeon Puzzles</h3>
-                        <p>Eradicate puzzle-based failures. Our solvers for Blaze, Water, Tic-Tac-Toe and more complete puzzles in milliseconds, ensuring faster, smoother, and more profitable dungeon runs.</p>
+                        <p>Eradicate puzzle-based failures. Our solvers for Blaze, Water, Tic-Tac-Toe, and more complete puzzles in milliseconds, ensuring faster, smoother, and more profitable dungeon runs.</p>
                     </div>
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
                         <i class="ph-chart-line"></i>
@@ -84,11 +84,11 @@
             <section id="why-wraith" class="why-wraith-section">
                 <div class="why-wraith-content">
                     <div class="why-wraith-text" data-aos="fade-right">
-                        <h2>Engineered for Victory</h2>
-                        <p>Wraith is not just a client; it's a meticulously crafted suite of tools designed to provide the ultimate Hypixel Skyblock advantage, prioritizing safety, performance, and power.</p>
+                        <h2>Engineered for Efficiency</h2>
+                        <p>Wraith isn't just a client. It's a powerful array of tools designed to provide you with the ultimate Hypixel Skyblock advantage. Our top priorities include risk mitigation, maximizing performance, and boosting overall user experience.</p>
                         <ul>
-                            <li><i class="ph-check-circle"></i> <strong>Undetectable by Design:</strong> Our client is built from the ground up with proprietary stealth technology to remain invisible to modern anti-cheats.</li>
-                            <li><i class="ph-check-circle"></i> <strong>Peak Performance:</strong> Written in a low-level language for maximum efficiency, ensuring zero FPS drops and minimal system overhead.</li>
+                            <li><i class="ph-check-circle"></i> <strong>Undetectable by Design:</strong> Our client is built from the ground up with state of the art stealth technology to remain invisible to modern anti-cheats.</li>
+                            <li><i class="ph-check-circle"></i> <strong>Peak Performance:</strong> Written in Java for maximum performance, ensuring zero FPS drops and minimal system overhead.</li>
                             <li><i class="ph-check-circle"></i> <strong>Constant Evolution:</strong> We are relentlessly updating Wraith with new features, security enhancements, and performance optimizations.</li>
                             <li><i class="ph-check-circle"></i> <strong>Community Focused:</strong> Your feedback shapes our development. Join our community to request features and guide the future of Wraith.</li>
                         </ul>
@@ -109,8 +109,7 @@
                            <div class="code-buttons">
                                <span class="code-btn"></span><span class="code-btn"></span><span class="code-btn"></span>
                            </div>
-                       </div>
-                       <pre><code class="language-lua">-- Example: Auto-sell items in your inventory based on rarity
+                       </div><pre><code class="language-lua">-- Example: Auto-sell items in your inventory based on rarity
 function autoSell(PlayerInventoryOpen, PlayerCookieGUI)
     -- Rarity levels for item categorization
     local rarityLevels = {
@@ -140,7 +139,9 @@ wraith:registerScript({
     author = "You",
     version = "1.0",
     onEnable = autoSell
-})</code></pre>
+})
+                           </code>
+                       </pre>
                    </div>
                </div>
            </section>
