--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <div id="real-content">
         <header class="main-header">
             <nav class="main-nav">
-                <a href="#" class="logo">WRAITH</a>
+                <a href="#" class="logo"><span class="logo-letter">W</span><span class="logo-letter">R</span><span class="logo-letter">A</span><span class="logo-letter">I</span><span class="logo-letter">T</span><span class="logo-letter">H</span></a>
                 <ul>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#why-wraith">Why Wraith?</a></li>
                     <li><a href="#scripting">Scripting</a></li>
+                    <li><a href="#experimentation">Experimentation</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#download">Download</a></li>
                 </ul>
@@ -56,7 +57,7 @@
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
                         <i class="ph-tree"></i>
                         <h3>Advanced Foraging</h3>
-                        <p>The most sophisticated foraging bot available. Achieve Foraging 60 completely AFK. Supports all axes, custom routes, and anti-stuck measures for uninterrupted progress.</p>
+                        <p>The most sophisticated foraging bot available. Achieve Foraging 50 completely AFK. Supports all axes, custom routes, and anti-stuck measures for uninterrupted progress.</p>
                     </div>
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                         <i class="ph-puzzle-piece"></i>
@@ -76,7 +77,7 @@
                      <div class="feature-card" data-aos="fade-up" data-aos-delay="700">
                         <i class="ph-ghost"></i>
                         <h3>Ghost Blocks</h3>
-                        <p>Phase through blocks to gain a tactical advantage. Create your own shortcuts in dungeons, access hidden areas, or secure secret chests. Fully customizable and key-bindable.</p>
+                        <p>Be able to make Ghost Blocks anywhere, Fully customizable and key-bindable.</p>
                     </div>
                 </div>
             </section>
@@ -94,7 +95,7 @@
                         </ul>
                     </div>
                     <div class="why-wraith-image" data-aos="fade-left">
-                        <img src="https://images.unsplash.com/photo-1574786180373-eb2a43753c26?q=80&w=1964&auto=format&fit=crop" alt="Wraith Client Showcase">
+                        <img src="" alt="Wraith Client Showcase">
                     </div>
                 </div>
             </section>
@@ -105,7 +106,7 @@
                    <p>Unleash your creativity with our powerful and intuitive scripting engine. Inspired by the simplicity of AutoHotkey and powered by the performance of Lua, you can create any utility you can imagine. From custom macros to complex automation, you have full control.</p>
                    <div class="code-editor-mockup">
                        <div class="code-header">
-                           <span>auto-harp.lua</span>
+                           <span>auto-sell.lua</span>
                            <div class="code-buttons">
                                <span class="code-btn"></span><span class="code-btn"></span><span class="code-btn"></span>
                            </div>
@@ -146,11 +147,66 @@ wraith:registerScript({
                </div>
            </section>
 
+           <section id="experimentation" class="experimentation-section" data-aos="fade-up">
+               <div class="experimentation-content">
+                   <h2>Experimentation Table Macro</h2>
+                   <p>Maximize your enchanting efficiency with our advanced Experimentation Table Macro. Never fail an experiment again and earn maximum XP with minimal effort.</p>
+
+                   <div class="experimentation-features">
+                       <div class="experimentation-feature" data-aos="fade-up" data-aos-delay="100">
+                           <i class="ph-lightning"></i>
+                           <h3>Lightning Fast Solving</h3>
+                           <p>Our macro solves all experimentation puzzles in milliseconds, ensuring you always get the maximum XP reward.</p>
+                       </div>
+                       <div class="experimentation-feature" data-aos="fade-up" data-aos-delay="200">
+                           <i class="ph-brain"></i>
+                           <h3>Intelligent Pattern Recognition</h3>
+                           <p>Advanced algorithms recognize and solve all three types of experimentation puzzles: Chronomatron, Ultrasequencer, and Superpairs.</p>
+                       </div>
+                       <div class="experimentation-feature" data-aos="fade-up" data-aos-delay="300">
+                           <i class="ph-gear"></i>
+                           <h3>Fully Customizable</h3>
+                           <p>Adjust timing, configure hotkeys, and set up automatic session scheduling to fit your playstyle.</p>
+                       </div>
+                   </div>
+
+                   <div class="experimentation-demo">
+                       <div class="experimentation-mockup">
+                           <div class="mockup-header">
+                               <span>Experimentation Table Macro</span>
+                           </div>
+                           <div class="mockup-body">
+                               <div class="mockup-status">Status: Active</div>
+                               <div class="mockup-stats">
+                                   <div class="stat-item">
+                                       <span class="stat-label">Sessions Completed:</span>
+                                       <span class="stat-value">247</span>
+                                   </div>
+                                   <div class="stat-item">
+                                       <span class="stat-label">Success Rate:</span>
+                                       <span class="stat-value">100%</span>
+                                   </div>
+                                   <div class="stat-item">
+                                       <span class="stat-label">XP Gained:</span>
+                                       <span class="stat-value">1,482,000</span>
+                                   </div>
+                               </div>
+                               <div class="mockup-controls">
+                                   <button class="mockup-button active">Chronomatron</button>
+                                   <button class="mockup-button">Ultrasequencer</button>
+                                   <button class="mockup-button">Superpairs</button>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </section>
+
            <section id="testimonials" class="testimonials-section">
                 <h2 data-aos="fade-up">Trusted by the Elite</h2>
                 <div class="testimonial-grid">
                     <div class="testimonial-card" data-aos="fade-up" data-aos-delay="100">
-                        <p>"The performance is unreal. I went from Foraging 40 to 60 in a week, completely AFK. The anti-stuck features are a game-changer. Wraith is in a league of its own."</p>
+                        <p>"The performance is unreal. I went from Foraging 40 to 50 in a week, completely AFK. The anti-stuck features are a game-changer. Wraith is in a league of its own."</p>
                         <span>- ATopTierGrinder</span>
                     </div>
                     <div class="testimonial-card" data-aos="fade-up" data-aos-delay="200">
@@ -163,22 +219,16 @@ wraith:registerScript({
                     </div>
                 </div>
            </section>
-   
+
            <section id="download" class="download-section">
                <h2>Begin Your Ascent</h2>
-               <p>Your journey to the top of Skyblock starts now. Download the client and redefine your limits.</p>
-               <div class="injector-mockup">
-                   <div class="injector-title-bar">
-                       <span>Wraith Client Loader</span>
-                       <div class="injector-controls">─ □ ×</div>
-                   </div>
-                   <div class="injector-body">
-                       <div class="injector-status">Status: Authenticated</div>
-                       <p class="injector-details">Ready to inject. Press LAUNCH to begin.</p>
-                       <div class="injector-progress-bar">
-                           <div class="injector-progress"></div>
-                       </div>
-                       <button class="injector-button">LAUNCH</button>
+               <p>Your journey to the top of Skyblock starts now. Join our closed beta and redefine your limits.</p>
+               <div class="closed-beta-notice">
+                   <div class="closed-beta-badge">CLOSED BETA</div>
+                   <p>Wraith is currently in closed beta. Join our Discord server to request access.</p>
+                   <div class="actions">
+                       <a href="download.html" class="btn btn-primary">Download Page</a>
+                       <a href="https://discord.gg/ghosthasgone" target="_blank" class="btn btn-secondary">Join Discord</a>
                    </div>
                </div>
            </section>
@@ -186,14 +236,12 @@ wraith:registerScript({
 
         <footer class="main-footer">
              <div class="footer-links">
-                <a href="https://discord.gg/your-discord" target="_blank"><i class="ph-discord-logo"></i></a>
-                <a href="#" target="_blank"><i class="ph-telegram-logo"></i></a>
-                <a href="#" target="_blank"><i class="ph-youtube-logo"></i></a>
+                <a href="https://discord.gg/ghosthasgone" target="_blank"><i class="ph-discord-logo"></i></a>
             </div>
-            <p>&copy; 2024 Wraith. All Rights Reserved.</p>
+            <p>&copy; 2025 Wraith. All Rights Reserved.</p>
         </footer>
     </div>
-    
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
