--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wraith - The Ultimate Hypixel Skyblock Advantage</title>
+    <link rel="icon" type="image/x-icon" href="assets/icon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,11 +34,13 @@
         <main>
             <section class="hero">
                 <div class="hero-content" data-aos="fade-up">
+                    <img src="assets/icon.ico" alt="Wraith Icon" class="hero-icon">
                     <div class="main-title">
                         <h1>WRAITH</h1>
                         <h1>WRAITH</h1>
                     </div>
-                    <p class="subtitle">Experience Hypixel Skyblock on a new level. Undetectable, powerful, and built for Efficiency.</p>
+
+                    <p class="subtitle">Automate the boring tasks and get rich, so you can finally play the fun parts.<br>Undetectable, powerful, and built for Efficiency.</p>
                     <div class="actions">
                         <a href="#download" class="btn btn-primary">Download Now</a>
                         <a href="https://discord.gg/ghosthasgone" target="_blank" class="btn btn-secondary">Join The Community</a>
@@ -46,7 +49,7 @@
             </section>
 
             <section id="features" class="features-section">
-                <h2 data-aos="fade-up">A New Generation of Automation</h2>
+                <h2 data-aos="fade-up">Features</h2>
                 <p class="section-description" data-aos="fade-up" data-aos-delay="100">Wraith comes packed with powerful, yet easy-to-use modules to automate your gameplay and give you a decisive edge.</p>
                 <div class="features-grid">
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
@@ -80,29 +83,51 @@
                         <p>Be able to make Ghost Blocks anywhere, Fully customizable and key-bindable.</p>
                     </div>
                 </div>
+                <div class="show-more-container" data-aos="fade-up" data-aos-delay="400">
+                    <a href="features.html" class="btn btn-primary">Show More Features</a>
+                </div>
             </section>
 
             <section id="why-wraith" class="why-wraith-section">
-                <div class="why-wraith-content">
-                    <div class="why-wraith-text" data-aos="fade-right">
-                        <h2>Engineered for Efficiency</h2>
-                        <p>Wraith isn't just a client. It's a powerful array of tools designed to provide you with the ultimate Hypixel Skyblock advantage. Our top priorities include risk mitigation, maximizing performance, and boosting overall user experience.</p>
-                        <ul>
-                            <li><i class="ph-check-circle"></i> <strong>Undetectable by Design:</strong> Our client is built from the ground up with state of the art stealth technology to remain invisible to modern anti-cheats.</li>
-                            <li><i class="ph-check-circle"></i> <strong>Peak Performance:</strong> Written in Java for maximum performance, ensuring zero FPS drops and minimal system overhead.</li>
-                            <li><i class="ph-check-circle"></i> <strong>Constant Evolution:</strong> We are relentlessly updating Wraith with new features, security enhancements, and performance optimizations.</li>
-                            <li><i class="ph-check-circle"></i> <strong>Community Focused:</strong> Your feedback shapes our development. Join our community to request features and guide the future of Wraith.</li>
-                        </ul>
+                <h2 data-aos="fade-up">Why Wraith?</h2>
+                <p class="section-description" data-aos="fade-up" data-aos-delay="100">
+                    Experience unparalleled performance and security with our meticulously crafted client.
+                </p>
+                <div class="why-wraith-grid">
+                    <div class="why-wraith-card" data-aos="fade-up" data-aos-delay="200">
+                        <div class="card-icon">
+                            <i class="ph ph-shield-check"></i>
+                        </div>
+                        <h3>Undetectable by Design</h3>
+                        <p>Built from the ground up with state-of-the-art stealth technology, remaining invisible to modern anti-cheats.</p>
                     </div>
-                    <div class="why-wraith-image" data-aos="fade-left">
-                        <img src="" alt="Wraith Client Showcase">
+                    <div class="why-wraith-card" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card-icon">
+                            <i class="ph ph-gauge"></i>
+                        </div>
+                        <h3>Peak Performance</h3>
+                        <p>Written in Java for maximum efficiency, ensuring zero FPS drops and minimal system overhead.</p>
+                    </div>
+                    <div class="why-wraith-card" data-aos="fade-up" data-aos-delay="400">
+                        <div class="card-icon">
+                            <i class="ph ph-arrow-circle-up"></i>
+                        </div>
+                        <h3>Constant Evolution</h3>
+                        <p>Relentlessly updated with new features, security enhancements, and performance optimizations.</p>
+                    </div>
+                    <div class="why-wraith-card" data-aos="fade-up" data-aos-delay="500">
+                        <div class="card-icon">
+                            <i class="ph ph-users"></i>
+                        </div>
+                        <h3>Community Focused</h3>
+                        <p>Your feedback shapes our development. Join our community to request features and guide the future of Wraith.</p>
                     </div>
                 </div>
             </section>
 
             <section id="scripting" class="scripting-section" data-aos="fade-up">
                 <div class="scripting-content">
-                   <h2>The WraithScript Engine</h2>
+                   <h2>Scripting</h2>
                    <p>Unleash your creativity with our powerful and intuitive scripting engine. Inspired by the simplicity of AutoHotkey and powered by the performance of Lua, you can create any utility you can imagine. From custom macros to complex automation, you have full control.</p>
                    <div class="code-editor-mockup">
                        <div class="code-header">
@@ -149,7 +174,7 @@ wraith:registerScript({
 
            <section id="experimentation" class="experimentation-section" data-aos="fade-up">
                <div class="experimentation-content">
-                   <h2>Experimentation Table Macro</h2>
+                   <h2>Experimentation</h2>
                    <p>Maximize your enchanting efficiency with our advanced Experimentation Table Macro. Never fail an experiment again and earn maximum XP with minimal effort.</p>
 
                    <div class="experimentation-features">
@@ -203,7 +228,7 @@ wraith:registerScript({
            </section>
 
            <section id="testimonials" class="testimonials-section">
-                <h2 data-aos="fade-up">Trusted by the Elite</h2>
+                <h2 data-aos="fade-up">Testimonials</h2>
                 <div class="testimonial-grid">
                     <div class="testimonial-card" data-aos="fade-up" data-aos-delay="100">
                         <p>"The performance is unreal. I went from Foraging 40 to 50 in a week, completely AFK. The anti-stuck features are a game-changer. Wraith is in a league of its own."</p>
@@ -221,7 +246,7 @@ wraith:registerScript({
            </section>
 
            <section id="download" class="download-section">
-               <h2>Begin Your Ascent</h2>
+               <h2>Download</h2>
                <p>Your journey to the top of Skyblock starts now. Join our closed beta and redefine your limits.</p>
                <div class="closed-beta-notice">
                    <div class="closed-beta-badge">CLOSED BETA</div>
@@ -254,4 +279,4 @@ wraith:registerScript({
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/lua.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
-</html> 
+</html>
